fixing btn width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .the_button {
-  width: 80%;
   height: 10%;
   color: white;
   background-color: gray;
